# annelid

./: .gitignore  Cargo.toml  Info.plist  README.md
.cargo/: config.toml
.github/workflows/: onpush.yml
data/: BattleToads  SuperMetroid.asl
scripts/: copy-deps.sh
src/: appconfig.rs  autosplitters.rs  gtk_ui.rs  hotkey.rs  lib.rs  linux.rs  livesplit.rs  livesplit_renderer.rs  logging.rs  main.rs  nwa.rs  platform.rs  usb2snes.rs  utils.rs  win32.rs
src/autosplitters/: battletoads.rs  json.rs  nwa.rs  supermetroid.rs
src/autosplitters/nwa/: battletoads.rs  supermetroid.rs
src/config/: app_config.rs  layout_meta.rs  layout_meta_egui.rs  mod.rs
src/linux/glium_gl_area/: imp.rs  mod.rs
src/routes/: supermetroid.rs
src/ui/: app_settings.rs  autosplitter_settings.rs  context_menu.rs  control_panel.rs  file_dialogs.rs  hotkeys.rs  layout_editor.rs  log_viewer.rs  mod.rs  splits_editor.rs
src/widget/: glow_canvas.rs  mod.rs
tests/: app_config.rs  file_dialogs.rs  hotkey.rs  json_parsing.rs  layout_editor.rs  layout_meta.rs  logging.rs  routes.rs  splits_editor.rs  supermetroid_settings.rs  supermetroid_splits.rs  supermetroid_start_reset.rs  utils.rs
