[package]
name = "annelid"
version = "0.1.0"
edition = "2021"
description = "A speedrun timer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#scan_fmt = "0.2.6"
websocket = "0"

livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = ["software-rendering", "font-loading"] }
livesplit-hotkey = { git = "https://github.com/LiveSplit/livesplit-core" }

epaint = "0.18"
eframe = "0.18"
egui = { version = "0.18", features = ["serde"] }
egui_glow = "0.18"
#egui_extras = "*"

lazy_static = "1"
strum = "0"
strum_macros = "0"
time = "0"
parking_lot = "*"
native-dialog = "0"
directories = "4"
roxmltree = "0"
clap = { version = "3", features = ["clap_derive", "derive"] }
toml = "0"
serde_derive = "1"
glow = "*"
bytemuck = { version = "*", features = ["derive"] }
memoffset = "*"
thread-priority = "0.10.0"

# really this means linux
[target.'cfg(linux)'.dependencies]
relm4 = "0"

[target.'cfg(macos)'.dependencies]
cacao = "0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0", features = [
    "Foundation_Numerics",
    #"Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
  ]}
native-windows-gui = "1"
winapi = { version = "0", features = [
  "winuser", "wingdi", "winbase", "libloaderapi", "processthreadsapi",
  "errhandlingapi", "winerror", "commctrl", "sysinfoapi", "shobjidl", "combaseapi",
  "commdlg", "d2d1", "objbase", "dwrite", "winnls", "shellapi", "wincodec", "stringapiset"] }

# Remember to test with --release
#[profile.dev]
#opt-level = 2
#debug = true

[package.metadata.bundle]
name = "Annelid"
identifier = "annelid"
copyright = "Copyright (c) Jason Dagit 2022. GPL 3."
short_description = "A speedrun timer."
long_description = """
A speedrun timer with autosplitter capabilities for USB2SNES.
"""

[package.metadata.appimage]
auto_link = true
# https://github.com/AppImage/pkg2appimage/blob/master/excludelist
auto_link_exclude_list = [
  "libc.so*",
  "libdl.so*",
  "libpthread.so*",
  "ld-linux.so*",
  "ld-linux-x86-64.so*",
  "libanl.so*",
  "libBrokenLocale.so*",
  "libcidn.so*",
  "libm.so*",
  "libmvec.so*",
  "libnss_compat.so*",
  "libnss_dns.so*",
  "libnss_files.so*",
  "libnss_hesiod.so*",
  "libnss_nisplus.so*",
  "libnss_nis.so*",
  "libresolv.so*",
  "librt.so*",
  "libthread_db.so*",
  "libutil.so*",
  "libstdc++.so*",
  "libGL.so*",
  "libEGL.so*",
  "libGLdispatch.so*",
  "libGLX.so*",
  "libOpenGL.so*",
  "libdrm.so*",
  "libglapi.so*",
  "libgbm.so*",
  "libxcb.so*",
  "libX11.so*",
  "libasound.so*",
  "libfontconfig.so*",
  "libthai.so*",
#  "libfreetype.so*",
#  "libharfbuzz.so*",
  "libcom_err.so*",
  "libexpat.so*",
  "libgcc_s.so*",
  "libgpg-error.so*",
  "libICE.so*",
  "libSM.so*",
  "libusb-1.0.so*",
  "libuuid.so*",
  "libz.so*",
  "libgpg-error.so*",
  "libjack.so*",
]

[[bin]]
name = "annelid"
path = "src/main.rs"
test = false
doc = false
