[package]
name = "annelid"
version = "0.1.0"
edition = "2021"
description = "A speedrun timer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0"

livesplit-core = { git = "https://github.com/dagit/livesplit-core", features = ["software-rendering", "font-loading"] }
livesplit-hotkey = { git = "https://github.com/dagit/livesplit-core" }

epaint = "0.24"
eframe = "0.24"
egui = { version = "0.24", features = ["serde"] }
egui_glow = "0.24"

lazy_static = "1"
strum = "0"
strum_macros = "0"
time = "0"
parking_lot = "*"
rfd = "0"
directories = "4"
roxmltree = "0"
clap = { version = "3", features = ["derive"] }
toml = "0"
serde_derive = "1"
glow = "0.12"
bytemuck = { version = "*", features = ["derive"] }
memoffset = "*"
thread-priority = "0.10.0"

# Remember to test with --release
[profile.dev]
opt-level = 3
debug = false

[profile.release]
strip = true
lto = true
codegen-units = 1
# Enable this to make even smaller binaries
#panic = abort

[package.metadata.bundle]
name = "Annelid"
identifier = "annelid"
copyright = "Copyright (c) Jason Dagit 2023. GPL 3."
short_description = "A speedrun timer."
long_description = """
A speedrun timer with autosplitter capabilities for USB2SNES.
"""

[package.metadata.appimage]
auto_link = true
# https://github.com/AppImage/pkg2appimage/blob/master/excludelist
auto_link_exclude_list = [
  "libc.so*",
  "libdl.so*",
  "libpthread.so*",
  "ld-linux.so*",
  "ld-linux-x86-64.so*",
  "libanl.so*",
  "libBrokenLocale.so*",
  "libcidn.so*",
  "libm.so*",
  "libmvec.so*",
  "libnss_compat.so*",
  "libnss_dns.so*",
  "libnss_files.so*",
  "libnss_hesiod.so*",
  "libnss_nisplus.so*",
  "libnss_nis.so*",
  "libresolv.so*",
  "librt.so*",
  "libthread_db.so*",
  "libutil.so*",
  "libstdc++.so*",
  "libGL.so*",
  "libEGL.so*",
  "libGLdispatch.so*",
  "libGLX.so*",
  "libOpenGL.so*",
  "libdrm.so*",
  "libglapi.so*",
  "libgbm.so*",
  "libxcb.so*",
  "libX11.so*",
  "libasound.so*",
  "libfontconfig.so*",
  "libthai.so*",
#  "libfreetype.so*",
#  "libharfbuzz.so*",
  "libcom_err.so*",
  "libexpat.so*",
  "libgcc_s.so*",
  "libgpg-error.so*",
  "libICE.so*",
  "libSM.so*",
  "libusb-1.0.so*",
  "libuuid.so*",
  "libz.so*",
  "libgpg-error.so*",
  "libjack.so*",
]

[[bin]]
name = "annelid"
path = "src/main.rs"
test = false
doc = false
